css/index.css
:root {

  --darkest: #000000;
  --graydark: #1F1F1F;
  --graymedium: #7B7D85;
  --graylight: #E3E3E3;
  --primary: #31EFB8;
  --primarydark: #00af7d;
  --white: #fff;
  --advice: #dafffb;
}
* {
  box-sizing: border-box;
}
html,
body {
  padding: 0;
  margin: 0;
  font-family: 'Source Sans Pro',system-ui, sans-serif;
  color: var(--graydark);
}
body {
  background-color: var(--white);
  /* background-image: linear-gradient(rgba(68, 68, 68, 0.05), white);
  background-size: 100% 300px;
  background-repeat: no-repeat; */
}
p:last-child {
  margin-bottom: 0;
}
p,
.tmpl-post li,
img,
h1, h2, h3,
.main-content {
  max-width: 42rem;
  position: relative;
}
img {
  max-width: 100%;
}
p,
li {
  line-height: 1.6;
}
ul, ol {
  margin-bottom: 2rem;
  padding-left: 1rem;
}
li {
  margin-bottom: 1rem;
}

a[href] {
  color: var(--primarydark);
}
a[href]:hover {
  color: var(--darkest);
}
a[href]:visited {
  /* color: var(--primarydark); */
}
main {
  padding: 1rem;
  background-image: url(/img/bg.png);
  background-repeat: no-repeat;
  background-position: center 120px;
}
header {
  display: flex;
  border-bottom: 1px solid var(--graylight);
  padding: 1.6rem;
  position: sticky;
  top: 0;
  width: 100%;
  background-color: white;
  z-index: 10;
}
header:after {
  content: "";
  display: table;
  clear: both;
}
header a[href] {
  color: var(--graydark);
}
table {
  margin: 1em 0;
}
table td,
table th {
  padding-right: 1em;
}
kbd {
  border: 1px solid var(--graylight);
  border-radius: 4px;
  padding: 0.4rem 0.6rem;
  box-shadow: 0 1px 0px 1px rgb(0 0 0 / 10%);
  background-color: #fff;
  margin-left: 0.16rem;
  margin-right: 0.16rem;
  white-space: nowrap;
}

h1 {
  font-size: 5rem;
}
h2 {
  font-size: 3rem;
  margin-top: 6rem;
}
h3 {
  font-size: 2rem;
  margin-top: 4rem;
  margin-bottom: 1rem;
}
h4 {
  font-size: 1.2rem;
  margin-top: 2rem;
  margin-bottom: 1rem;
}
p, li {
  font-size: 1.1rem;
  word-wrap: break-word;
}
.main-paragraph {
  font-size: 1.5rem;
}

hr {
  background-color: var(--graylight);
  margin-top: 6rem;
  height: 1px;
  border: none;
}
blockquote {
  border-left: 4px solid var(--graylight);
  margin-top: 2rem;
  margin-left: 2rem;
  padding-left: 2rem;
}

pre,
code {
  font-family: Consolas, Menlo, Monaco, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", "Courier New", Courier, monospace;
  line-height: 1.5;
}
pre {
  font-size: 14px;
  line-height: 1.375;
  direction: ltr;
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  -moz-tab-size: 2;
  -o-tab-size: 2;
  tab-size: 2;
  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  hyphens: none;
  padding: 1em;
  margin: .5em 0;
  background-color: #f6f6f6;
  overflow: auto;
}
.highlight-line {
  display: block;
  padding: 0.125em 1em;
  text-decoration: none; /* override del, ins, mark defaults */
  color: inherit; /* override del, ins, mark defaults */
}

/* allow highlighting empty lines */
.highlight-line:empty:before {
  content: " ";
}
/* avoid double line breaks when using display: block; */
.highlight-line + br {
  display: none;
}

.highlight-line-isdir {
  color: #b0b0b0;
  background-color: #222;
}
.highlight-line-active {
  background-color: #444;
  background-color: hsla(0, 0%, 27%, .8);
}
.highlight-line-add {
  background-color: #45844b;
}
.highlight-line-remove {
  background-color: #902f2f;
}

/* Header */
.preheader {
  background: var(--graydark);
  padding: 1rem 1.6rem;
  display: flex;
  align-items: center;
}
.preheader .home {
  font-size: 1em; /* 16px /16 */
  text-decoration: none;
  flex: 1;
}
.preheader .home svg {
  height: 36px;
  width: 116px;
  fill: white;
}
.preheader .home :link:not(:hover) {
  text-decoration: none;
}
.header-inner {
  display: flex;
  max-width: 1400px;
  width: 100%;
  margin: auto;
  position: relative;
}
.header-title {
  font-size: 1.4rem;
  display: inline;
  font-weight: normal;
  color: var(--graymedium);
  text-decoration: none;
  font-weight: 300;
}

.button {
  align-items: center;
  background: var(--primary);
  color: var(--graydark) !important;
  border-radius: 4px;
  cursor: pointer;
  display: flex;
  font-size: 1rem;
  justify-content: center;
  padding: 0 1rem;
  text-align: center;
  text-decoration: none;
  transition: all .4s;
  min-height: 2rem;
}
.button:hover {
  background: white;
}


/* Nav */
.nav {
  display: flex;
  list-style: none;
  margin: 0 auto;
  padding: 0;
  align-items: center;
}
.nav-item {
  display: inline-block;
  margin-left: 1.4rem;
  margin-right: 1.4rem;
  margin-bottom: 0;
  font-size: 1.1rem;
}
.nav-item a[href]:not(:hover) {
  text-decoration: none;
}
.nav-item-active {
  font-weight: 700;
  text-decoration: underline;
}

/* Posts list */
.postlist {
  list-style: none;
  padding: 0;
}
.postlist-item {
  counter-increment: start-from -1;
}
.postlist-item:before {
  display: inline-block;
  pointer-events: none;
  content: "" counter(start-from, decimal-leading-zero) ". ";
  line-height: 100%;
  text-align: right;
}
.postlist-date,
.postlist-item:before {
  font-size: 0.8125em; /* 13px /16 */
  color: var(--graydark);
}
.postlist-date {
  word-spacing: -0.5px;
}
.postlist-link {
  display: inline-block;
  padding: 0.25em 0.1875em; /* 4px 3px /16 */
}
.postlist-item-active .postlist-link {
  font-weight: bold;
}
.tmpl-home .postlist-link {
  font-size: 1.1875em; /* 19px /16 */
  font-weight: 700;
}

.pre-footer {
  padding: 2rem;
  margin-top: 2rem;
  display: flex;
  justify-content: center;
  border-top: 1px dashed var(--graylight);
}

footer {
  align-items: center;
  background-color: var(--graydark);
  display: flex;
  flex-direction: column;
  padding: 4rem 2rem;
  width: 100%;
}
.footer-inside {
  display: flex;
  flex-direction: row;
  max-width: 1400px;
  width: 100%;
}
.footer-inside .main-logo {
    margin-right: auto;
}
/* ... */

